// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Binary invalid renders correctly 1`] = `
<jest>
  <div
    class="ecl-radio ecl-radio--binary"
  >
    <input
      checked=""
      class="ecl-radio__input"
      id="radio-binary-1"
      name="radio-group-1"
      required=""
      type="radio"
      value="yes"
    />
    <label
      class="ecl-radio__label"
      for="radio-binary-1"
    >
      <span
        class="ecl-radio__box ecl-radio__box--invalid"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Yes
      </span>
    </label>
  </div>
  <div
    class="ecl-radio ecl-radio--binary"
  >
    <input
      class="ecl-radio__input"
      id="radio-binary-2"
      name="radio-group-1"
      required=""
      type="radio"
      value="no"
    />
    <label
      class="ecl-radio__label"
      for="radio-binary-2"
    >
      <span
        class="ecl-radio__box ecl-radio__box--invalid"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        No
      </span>
    </label>
  </div>
</jest>
`;

exports[`Radio Binary renders correctly 1`] = `
<jest>
  <div
    class="ecl-radio ecl-radio--binary"
  >
    <input
      checked=""
      class="ecl-radio__input"
      id="radio-binary-1"
      name="radio-group-1"
      required=""
      type="radio"
      value="yes"
    />
    <label
      class="ecl-radio__label"
      for="radio-binary-1"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Yes
      </span>
    </label>
  </div>
  <div
    class="ecl-radio ecl-radio--binary"
  >
    <input
      class="ecl-radio__input"
      id="radio-binary-2"
      name="radio-group-1"
      required=""
      type="radio"
      value="no"
    />
    <label
      class="ecl-radio__label"
      for="radio-binary-2"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        No
      </span>
    </label>
  </div>
</jest>
`;

exports[`Radio Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-default-1"
      name="radio-group-1"
      required=""
      type="radio"
      value="lu"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-1"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Luxembourg
      </span>
    </label>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-default-2"
      name="radio-group-1"
      required=""
      type="radio"
      value="be"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-2"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Belgium
      </span>
    </label>
  </div>
  <div
    class="ecl-radio ecl-radio--disabled"
  >
    <input
      class="ecl-radio__input"
      disabled=""
      id="radio-default-3"
      name="radio-group-1"
      required=""
      type="radio"
      value="fr"
    />
    <label
      class="ecl-radio__label ecl-radio__label--disabled"
      for="radio-default-3"
    >
      <span
        class="ecl-radio__box ecl-radio__box--disabled"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        France (disabled)
      </span>
    </label>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-default-4"
      name="radio-group-1"
      required=""
      type="radio"
      value="lorem"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-4"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Lorem ipsum dolor sit amet, 
        <a
          href="/example"
        >
          consectetur adipiscing elit
        </a>
        . Nullam suscipit eros gravida arcu aliquet, sed finibus nisl egestas. Cras sed purus nec turpis eleifend dignissim a in massa.
      </span>
    </label>
  </div>
</jest>
`;

exports[`Radio Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-default-1"
      name="radio-group-1"
      required=""
      type="radio"
      value="lu"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-1"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Luxembourg
      </span>
    </label>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-default-2"
      name="radio-group-1"
      required=""
      type="radio"
      value="be"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-2"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Belgium
      </span>
    </label>
  </div>
  <div
    class="ecl-radio ecl-radio--disabled"
  >
    <input
      class="ecl-radio__input"
      disabled=""
      id="radio-default-3"
      name="radio-group-1"
      required=""
      type="radio"
      value="fr"
    />
    <label
      class="ecl-radio__label ecl-radio__label--disabled"
      for="radio-default-3"
    >
      <span
        class="ecl-radio__box ecl-radio__box--disabled"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        France (disabled)
      </span>
    </label>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-default-4"
      name="radio-group-1"
      required=""
      type="radio"
      value="lorem"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-4"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Lorem ipsum dolor sit amet, 
        <a
          href="/example"
        >
          consectetur adipiscing elit
        </a>
        . Nullam suscipit eros gravida arcu aliquet, sed finibus nisl egestas. Cras sed purus nec turpis eleifend dignissim a in massa.
      </span>
    </label>
  </div>
</jest>
`;

exports[`Radio Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-default-1"
      name="radio-group-1"
      required=""
      type="radio"
      value="lu"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-1"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Luxembourg
      </span>
    </label>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-default-2"
      name="radio-group-1"
      required=""
      type="radio"
      value="be"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-2"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Belgium
      </span>
    </label>
  </div>
  <div
    class="ecl-radio ecl-radio--disabled"
  >
    <input
      class="ecl-radio__input"
      disabled=""
      id="radio-default-3"
      name="radio-group-1"
      required=""
      type="radio"
      value="fr"
    />
    <label
      class="ecl-radio__label ecl-radio__label--disabled"
      for="radio-default-3"
    >
      <span
        class="ecl-radio__box ecl-radio__box--disabled"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        France (disabled)
      </span>
    </label>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-default-4"
      name="radio-group-1"
      required=""
      type="radio"
      value="lorem"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-4"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Lorem ipsum dolor sit amet, 
        <a
          href="/example"
        >
          consectetur adipiscing elit
        </a>
        . Nullam suscipit eros gravida arcu aliquet, sed finibus nisl egestas. Cras sed purus nec turpis eleifend dignissim a in massa.
      </span>
    </label>
  </div>
</jest>
`;

exports[`Radio Invalid renders correctly 1`] = `
<jest>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-default-1"
      name="radio-group-1"
      required=""
      type="radio"
      value="lu"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-1"
    >
      <span
        class="ecl-radio__box ecl-radio__box--invalid"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Luxembourg
      </span>
    </label>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-default-2"
      name="radio-group-1"
      required=""
      type="radio"
      value="be"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-2"
    >
      <span
        class="ecl-radio__box ecl-radio__box--invalid"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Belgium
      </span>
    </label>
  </div>
  <div
    class="ecl-radio ecl-radio--disabled"
  >
    <input
      class="ecl-radio__input"
      disabled=""
      id="radio-default-3"
      name="radio-group-1"
      required=""
      type="radio"
      value="fr"
    />
    <label
      class="ecl-radio__label ecl-radio__label--disabled"
      for="radio-default-3"
    >
      <span
        class="ecl-radio__box ecl-radio__box--disabled ecl-radio__box--invalid"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        France (disabled)
      </span>
    </label>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-default-4"
      name="radio-group-1"
      required=""
      type="radio"
      value="lorem"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-4"
    >
      <span
        class="ecl-radio__box ecl-radio__box--invalid"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Lorem ipsum dolor sit amet, 
        <a
          href="/example"
        >
          consectetur adipiscing elit
        </a>
        . Nullam suscipit eros gravida arcu aliquet, sed finibus nisl egestas. Cras sed purus nec turpis eleifend dignissim a in massa.
      </span>
    </label>
  </div>
</jest>
`;

exports[`Radio Optional renders correctly 1`] = `
<jest>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-default-1"
      name="radio-group-1"
      type="radio"
      value="lu"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-1"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Luxembourg
      </span>
    </label>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-default-2"
      name="radio-group-1"
      type="radio"
      value="be"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-2"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Belgium
      </span>
    </label>
  </div>
  <div
    class="ecl-radio ecl-radio--disabled"
  >
    <input
      class="ecl-radio__input"
      disabled=""
      id="radio-default-3"
      name="radio-group-1"
      type="radio"
      value="fr"
    />
    <label
      class="ecl-radio__label ecl-radio__label--disabled"
      for="radio-default-3"
    >
      <span
        class="ecl-radio__box ecl-radio__box--disabled"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        France (disabled)
      </span>
    </label>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-default-4"
      name="radio-group-1"
      type="radio"
      value="lorem"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-4"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      <span
        class="ecl-radio__text"
      >
        Lorem ipsum dolor sit amet, 
        <a
          href="/example"
        >
          consectetur adipiscing elit
        </a>
        . Nullam suscipit eros gravida arcu aliquet, sed finibus nisl egestas. Cras sed purus nec turpis eleifend dignissim a in massa.
      </span>
    </label>
  </div>
</jest>
`;
